Fixed issued with border-top on large footer; JS now only finding navbars that are visible to compute the border-top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1725,9 +1725,9 @@ $bs-height-xs:   (floor($font-size-small * 1.2) + $padding-small-vertical + 1);
 // Footer
 .foot {
   position: relative;
-  margin-bottom: -25px; /* negative value of footer height */
+  margin-bottom: -50px; /* negative value of footer height */
   background: $colour-7;
-  border-top: 0px solid $colour-3;
+  border-top: 10px solid $colour-3;
   padding: $gutter*1.5 0 $gutter*2 0;
   text-align: center;
   @include clearfix();
